Removed box shadow on top nav and made it inset on side nav. Added -webkit-backface-visibility: hidden to arrow to fix mobile bug.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,15 +29,10 @@ section[role='main'] {
 
 .panel {
   position: relative;
-  z-index: 100;
+  z-index: 97;
   height: 100%;
   float: right;
-  background-color: #ecebe8;
-  background-size: 15px 15px;
-  background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-  background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-  background-image: -ms-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-  background-image: -o-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent); }
+  background-color: white; }
   .panel .panel-header {
     width: 100%;
     background-color: white;
@@ -46,13 +41,15 @@ section[role='main'] {
   .panel .panel-body {
     width: 100%;
     padding: 8px 24px;
-    border-top: 1px solid #c5c5c5; }
+    border-top: 1px solid #c5c5c5;
+    background-color: white; }
 
 .panel-overlay {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 98;
   height: 100%;
   width: 100%;
   background-color: #555;
@@ -358,7 +355,7 @@ section[role='main'] {
 
 /* _nav.scss */
 .navbar {
-  z-index: 97;
+  z-index: 100;
   width: 100%;
   height: 48px;
   font-size: 18px;
@@ -382,10 +379,7 @@ ul.nav {
   position: fixed; }
   .navbar .navbar-content {
     background-color: #333333;
-    color: white;
-    -moz-box-shadow: 0px 1px 14px 4px #cccccc;
-    -webkit-box-shadow: 0px 1px 14px 4px #cccccc;
-    box-shadow: 0px 1px 14px 4px #cccccc; }
+    color: white; }
   .navbar .brand {
     height: 100%;
     position: relative;
@@ -434,18 +428,19 @@ ul.nav.vertical {
 .side-nav {
   position: fixed;
   top: 48px;
-  z-index: 98;
+  z-index: 99;
   background-color: #c64a49;
-  -moz-box-shadow: 1px 10px 14px 4px #cccccc;
-  -webkit-box-shadow: 1px 10px 14px 4px #cccccc;
-  box-shadow: 1px 10px 14px 4px #cccccc;
+  -moz-box-shadow: inset -7px 7px 14px -7px #444444;
+  -webkit-box-shadow: inset -7px 7px 14px -7px #444444;
+  box-shadow: inset -7px 7px 14px -7px #444444;
   width: 60px;
   height: 100%; }
   .side-nav .nav li {
     position: relative; }
   .side-nav .nav i {
     display: block;
-    font-size: 30px; }
+    font-size: 30px;
+    -webkit-backface-visibility: hidden; }
   .side-nav .nav a, .side-nav .nav a:link, .side-nav .nav a:visited {
     font-size: 13px;
     color: white;
@@ -454,7 +449,8 @@ ul.nav.vertical {
     -moz-transition: color 0.8s ease;
     -ms-transition: color 0.8s ease;
     -o-transition: color 0.8s ease;
-    transition: color 0.8s ease; }
+    transition: color 0.8s ease;
+    -webkit-backface-visibility: hidden; }
   .side-nav .nav a:hover::before {
     color: white; }
   .side-nav .nav a:hover::before {
@@ -476,7 +472,8 @@ ul.nav.vertical {
     -moz-transition: width 0.8s ease, border-right 0.8s ease;
     -ms-transition: width 0.8s ease, border-right 0.8s ease;
     -o-transition: width 0.8s ease, border-right 0.8s ease;
-    transition: width 0.8s ease, border-right 0.8s ease; }
+    transition: width 0.8s ease, border-right 0.8s ease;
+    -webkit-backface-visibility: hidden; }
 
 #about:target::before {
   display: block;
