--- a/public/scss/partials/_nav.scss
+++ b/public/scss/partials/_nav.scss
@@ -34,7 +34,7 @@
 
 		background-color: $headerBackgroundColor;
 		color: $headerColor;
-		@include box-shadow(0px, 1px, 14px, 4px, #ccc);
+		//@include box-shadow(0px, 1px, 14px, 4px, #ccc);
 	}
 
 	& .brand {
@@ -103,7 +103,7 @@ ul.nav.vertical {
 	background-color: $cyan;
 
 	//border-right: 1px solid $grayLight; media query
-	@include box-shadow(1px, 10px, 14px, 4px, #ccc);
+	@include box-shadow(inset -7px, 7px, 14px, -7px, #444);
 
 	width: $mobileLeftNavWidth;
 	height: 100%;
@@ -120,6 +120,8 @@ ul.nav.vertical {
 	& .nav i {
 		display: block;
 		font-size: $mobileLeftNavIconSize;
+
+		-webkit-backface-visibility: hidden;
 	}
 
 	& .nav a,
@@ -129,6 +131,8 @@ ul.nav.vertical {
 		color: $white;
 		outline: none;
 		@include transition(color 0.8s ease);
+
+		-webkit-backface-visibility: hidden;
 	}
 
 	& .nav a:hover::before {
@@ -158,6 +162,8 @@ ul.nav.vertical {
 		//background-color: $cyan; media query
 		content: "";
 		@include transition(width 0.8s ease, border-right 0.8s ease);
+
+		-webkit-backface-visibility: hidden;
 	}
 }
 
